[metadata]
name = transmission_remove
version = 0.0.1
description = transmission_remove is designed to remove torrents and the folder.
author = IncognitoCoding
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IncognitoCoding/icexcel
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows

platforms = any

[options]
python_requires = >= 3.9
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
install_requires =
	black==22.3.0
    pylint==2.13.9
    fchecker==0.15.4
    fexception==0.3.16
    ictoolkit@git+https://github.com/IncognitoCoding/ictoolkit.git@b645b898d96e8c41d61dcb0b2433f823ad57ef9c

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    pytest
    pytest-cov

[tool:pytest]
addopts =
    --cov --cov-report term-missing -s
    --verbose
norecursedirs =
    dist
    build
testpaths = tests

[bdist_wheel]
universal = 1